--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "RequestsContext": "Server=tcp:192.168.8.102,49172;Database=EmployeeDB;User=SA;Password=qaz@123;ConnectRetryCount=0;MultipleActiveResultSets=true"
+  }
 }
