--- a/API.csproj
+++ b/API.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.9" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.app" Version="2.2.6" />
